Add all files from Code folder

--- a/Index.html
+++ b/Index.html
@@ -45,9 +45,7 @@
               </select>
               <button onclick="chooseIceCream('2 Scoops Ice Cream', 4, 'flavorSelect2')">Add to Cart</button>
           </div>
-        
-          
-
+        </div>
     </main>
 
     <script src="script.js"></script>
